add sql queries